# gpu_execution_sandbox

./: .gitignore  CMakeLists.txt  README.md  build.bat
analysis_notes/: nsight_compute.md
common/: bench.hpp  cuda_check.cuh  cuda_timer.cuh
cuda_notes/: cuda_pipeline_architectures.md  gpu_execution_fundamentals.md  nsight_compute_checklist.md
experiments_cuda/: experiments_loadmap.md
experiments_cuda/exp01_batch_scaling/: README.md  analysis.md  main.cu
experiments_cuda/exp02_5_overlap_cases/: analysis.md  main.cu
experiments_cuda/exp02_overlap/: README.md  analysis.md  main.cu
experiments_cuda/exp03_block_size_sweep/: README.md  analysis.md  main.cu
experiments_cuda/exp04_memory_access_pattern/: README.md  analysis.md  main.cu
